--- a/Quiz/Quiz.vcxproj
+++ b/Quiz/Quiz.vcxproj
@@ -19,11 +19,16 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="io.c" />
     <ClCompile Include="linked_list.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="quiz.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="io.h" />
     <ClInclude Include="linked_list.h" />
+    <ClInclude Include="main.h" />
+    <ClInclude Include="quiz.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
