--- a/Quiz/Quiz.vcxproj.filters
+++ b/Quiz/Quiz.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="quiz.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="utility.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -41,5 +44,13 @@
     <ClInclude Include="quiz.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="utility.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="test">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
