Patched up potential memory leaks.

--- a/Quiz/Quiz.vcxproj
+++ b/Quiz/Quiz.vcxproj
@@ -37,6 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="quiz_history.txt" />
+    <Text Include="test.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
